--- a/kie-wb-common-react/boxed-expression-editor/src/components/BoxedExpressionEditor/BoxedExpressionEditor.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/BoxedExpressionEditor/BoxedExpressionEditor.css
@@ -15,5 +15,69 @@
  */
 
 .boxed-expression-editor {
+  background-color: var(--pf-global--BackgroundColor--100);
+  font-family: var(--pf-global--FontFamily--sans-serif);
+  font-size: var(--pf-global--FontSize--md);
+  font-weight: var(--pf-global--FontWeight--normal);
+  line-height: var(--pf-global--LineHeight--md);
+  text-align: left;
+}
 
- }
+.boxed-expression-editor *, .boxed-expression-editor *:after, .boxed-expression-editor *:before {
+  box-sizing: border-box;
+}
+
+.boxed-expression-editor a, .boxed-expression-editor button {
+  cursor: pointer;
+}
+
+.boxed-expression-editor table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+.boxed-expression-editor .pf-c-menu__group-title {
+  padding: var(--pf-c-menu__group-title--PaddingTop) var(--pf-c-menu__group-title--PaddingRight) var(--pf-c-menu__group-title--PaddingBottom) var(--pf-c-menu__group-title--PaddingLeft);
+  font-weight: var(--pf-c-menu__group-title--FontWeight);
+  color: var(--pf-c-menu__group-title--Color);
+}
+
+.boxed-expression-editor .pf-c-menu__item {
+  color: var(--pf-c-menu__item--Color);
+}
+
+.boxed-expression-editor button,
+.boxed-expression-editor input,
+.boxed-expression-editor optgroup,
+.boxed-expression-editor select,
+.boxed-expression-editor textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: var(--pf-global--LineHeight--md);
+  color: var(--pf-global--Color--100);
+}
+
+.boxed-expression-editor blockquote,
+.boxed-expression-editor dd,
+.boxed-expression-editor dl,
+.boxed-expression-editor dt,
+.boxed-expression-editor fieldset,
+.boxed-expression-editor figure,
+.boxed-expression-editor h1,
+.boxed-expression-editor h2,
+.boxed-expression-editor h3,
+.boxed-expression-editor h4,
+.boxed-expression-editor h5,
+.boxed-expression-editor h6,
+.boxed-expression-editor hr,
+.boxed-expression-editor iframe,
+.boxed-expression-editor legend,
+.boxed-expression-editor li,
+.boxed-expression-editor ol,
+.boxed-expression-editor p,
+.boxed-expression-editor pre,
+.boxed-expression-editor textarea,
+.boxed-expression-editor ul {
+  padding: 0;
+  margin: 0;
+}
