Fixing padding for giving space to drawer in case of three dots (...)

--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -92,7 +92,7 @@
 }
 
 .expression-container .table-component tr > *:last-child {
-  padding-right: 0;
+  padding-right: 0.6em;
 }
 
 .expression-container .table-component table tbody td + td {
