--- a/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/Table/Table.css
@@ -41,6 +41,7 @@
 
 .expression-container .table-component table th.fixed-column {
   font-weight: 400;
+  min-width: 60px;
 }
 
 .expression-container .table-component table th .data-type {
@@ -116,6 +117,7 @@
 .expression-container .table-component table tbody tr.table-row,
 .expression-container .table-component table tbody td.data-cell {
   width: 100%;
+  overflow-y: hidden;
 }
 
 .expression-container .table-component table .pf-c-drawer__splitter {
@@ -146,6 +148,7 @@
   margin: 0;
   border: 0;
   width: 100%;
+  height: 100%;
   resize: none;
 }
 
