--- a/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextExpression.css
@@ -14,17 +14,17 @@
  * limitations under the License.
  */
 
-.context-expression {
+.expression-container .context-expression {
   width: 100%;
 }
 
-.context-expression .context-result {
+.expression-container .context-expression .context-result {
   font-style: italic;
   color: gray;
 }
 
-.context-expression .context-entry-info-cell,
-.context-expression .context-result {
+.expression-container .context-entry-info-cell,
+.expression-container .context-expression .context-result {
   height: 100%;
   display: flex;
   align-items: center;
