--- a/kie-wb-common-react/boxed-expression-editor/src/components/InvocationExpression/InvocationExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/InvocationExpression/InvocationExpression.css
@@ -17,21 +17,17 @@
 .expression-container .invocation-expression .function-definition-container,
 .expression-container .invocation-expression .function-definition-container .function-definition,
 /** Increasing width and height for the .header-cell-info which contains .function-definition-container */
-.expression-container .invocation-expression > .table-component > table > thead > tr:nth-of-type(2) > th:last-of-type > .header-cell > .header-cell-info {
+.expression-container .invocation-expression > .table-component > table > thead > tr > th:last-of-type > .header-cell > .header-cell-info {
   width: 100%;
   height: 100%;
 }
 
-.expression-container .invocation-expression > .table-component > table > thead > tr:last-of-type {
+.expression-container .invocation-expression > .table-component > table > thead > tr:nth-child(3) {
+  /**
+    Hiding last row in the header since it is useless for the Invocation expression
+    Using !important because of the inline style
+  */
   display: none !important;
-}
-
-.expression-container .invocation-expression > .table-component > table > tbody > tr > td:nth-child(2) {
-  width: fit-content !important;
-}
-
-.expression-container .invocation-expression > .table-component > table > tbody > tr > td:nth-child(3) {
-  width: 100% !important;
 }
 
 .expression-container .invocation-expression .function-definition-container {
