When popover label is not passed to ContextEntryInfo component, then no popover is available

--- a/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextEntryInfo.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/ContextExpression/ContextEntryInfo.css
@@ -19,8 +19,11 @@
 }
 
 .expression-container .entry-info .entry-definition {
-  cursor: pointer;
   padding: 0.25em;
+}
+
+.expression-container .entry-info .entry-definition.with-popover-menu {
+  cursor: pointer;
 }
 
 .expression-container .entry-info .entry-definition .entry-name {
