--- a/kie-wb-common-react/boxed-expression-editor/src/components/LiteralExpression/PMMLLiteralExpression.css
+++ b/kie-wb-common-react/boxed-expression-editor/src/components/LiteralExpression/PMMLLiteralExpression.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Red Hat, Inc. and/or its affiliates.
+ * Copyright 2021 Red Hat, Inc. and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,5 +14,9 @@
  * limitations under the License.
  */
 
-export * from "./LiteralExpression";
-export * from "./PMMLLiteralExpression";
+.pmml-literal-expression.showing-placeholder .pf-c-select__toggle-text {
+  color: gray;
+  font-style: italic;
+  font-weight: var(--pf-global--FontWeight--normal);
+  padding-right: 0.125em;
+}
