RHDM-1611: Show vertical scrollbar on small screen for data types placeholder

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.less
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.less
@@ -76,7 +76,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow-y: hidden;
+    overflow-y: auto;
     flex: 1 1 auto;
     margin-top: 20px;
 
