--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/template/dmn-documentation-template.html
@@ -162,7 +162,7 @@
             vertical-align: middle;
             font-weight: bold;
             padding-right: 5px;
-            white-space: nowrap;
+            white-space: pre-wrap;
             overflow: hidden;
             text-overflow: ellipsis;
         }
